# fava-trails

./: .env-example  .fava-trail.yaml  .fava-trails.yaml  .gitignore  AGENTS.md  AGENTS_SETUP_INSTRUCTIONS.md  AGENTS_USAGE_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TRUST_GATE_PROMPT_EXAMPLE.md  af-config.json  issue-52.md  prd-51.md  pyproject.toml
.codev/: config.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml  test.yml  traffic.yml
codev/: .update-hashes.json  spir-v2.md
codev/branches/main/: status.md
codev/epics/: 0001a-trust-gate.md  0002a-desktop-pipeline.md  0003a-recall-pipeline.md  0004a-rebrand.md  0005a-adoption.md  0006a-openclaw.md
codev/plans/: 0-repo-separation.md  1-wise-fava-trail.md  10-codev-integration.md  10-openclaw-memory-driver.md  11-openclaw-memory-driver.md  12-rebrand-fava-trails.md  13-oss-readiness.md  13-spec-22-unified-config-archite.md  14-cli.md  14-tick-001-jj-auto-install.md  17-replace-openai-sdk-with-any-llm.md  18-ace-reference.md  19-rlm-reference.md  1b-storage-substrate-amendments.md  1c-mcp-instructions-field.md  2-dogfood-desktop-bridge.md  2-hierarchical-scoping.md  2-trust-gate.md  3-desktop-bridge.md  3-semantic-recall-trust-gate.md  3-trust-gate.md  4-codev-integration.md  4-desktop-bridge.md  4-pull-daemon.md  5-openclaw-memory-driver.md  5-pull-daemon.md  5-recall-enhancements.md  6-recall-enhancements.md  6-semantic-recall.md  7-eval-framework.md  7-semantic-recall.md  8-eval-framework.md  8-toolkit-migration.md  9-codev-integration.md  9-toolkit-migration.md
codev/projects/12-rebrand-fava-trails/: 12-phase_1-iter1-claude.txt  12-phase_1-iter1-codex.txt  12-phase_1-iter1-gemini.txt  12-phase_1-iter1-rebuttals.md  12-phase_2-iter1-claude.txt  12-phase_2-iter1-codex.txt  12-phase_2-iter1-gemini.txt  12-phase_2-iter1-rebuttals.md  12-phase_3-iter1-claude.txt  12-phase_3-iter1-codex.txt  12-phase_3-iter1-gemini.txt  12-phase_3-iter1-rebuttals.md  12-plan-iter1-claude.txt  12-plan-iter1-codex.txt  12-plan-iter1-gemini.txt  12-plan-iter1-rebuttals.md  12-review-iter1-claude.txt  12-review-iter1-codex.txt  12-review-iter1-gemini.txt  12-specify-iter1-claude.txt  12-specify-iter1-codex.txt  12-specify-iter1-gemini.txt  12-specify-iter1-rebuttals.md  status.yaml
codev/projects/13-oss-readiness/: 13-phase_1-iter1-claude.txt  13-phase_1-iter1-codex.txt  13-phase_1-iter1-gemini.txt  13-phase_1-iter1-rebuttals.md  13-phase_2-iter1-claude.txt  13-phase_2-iter1-codex.txt  13-phase_2-iter1-gemini.txt  13-phase_2-iter1-rebuttals.md  13-plan-iter1-claude.txt  13-plan-iter1-codex.txt  13-plan-iter1-gemini.txt  13-plan-iter1-rebuttals.md  13-review-iter1-claude.txt  13-review-iter1-codex.txt  13-review-iter1-gemini.txt  13-specify-iter1-claude.txt  13-specify-iter1-codex.txt  (+4 more)
codev/resources/: arch.md  architectural-choices.md  lessons-learned.md  prd-v2.md
codev/reviews/: 0-repo-separation.md  1-wise-fava-trail.md  12-rebrand-fava-trails.md  13-oss-readiness.md  14-cli.md  14-tick-001-jj-auto-install.md  17-replace-openai-sdk-with-any-llm.md  1b-storage-substrate-amendments-tick-001.md  1b-storage-substrate-amendments.md  1c-mcp-instructions-field.md  3-trust-gate-tick-001.md  3-trust-gate.md
codev/specs/: 0-repo-separation.md  1-wise-fava-trail.md  10-codev-integration.md  10-openclaw-memory-driver.md  11-openclaw-memory-driver.md  12-rebrand-fava-trails.md  13-oss-readiness.md  14-cli.md  14-tick-001-jj-auto-install.md  15-data-repo-management-cli.md  17-replace-openai-sdk-with-any-llm.md  1b-mutable-content.md  1b-storage-substrate-amendments.md  1c-mcp-instructions-field.md  2-dogfood-desktop-bridge.md  2-hierarchical-scoping.md  2-trust-gate.md  3-desktop-bridge.md  3-semantic-recall-trust-gate.md  3-trust-gate.md  4-codev-integration.md  4-desktop-bridge.md  4-pull-daemon.md  5-openclaw-memory-driver.md  5-pull-daemon.md  5-recall-enhancements.md  6-recall-enhancements.md  6-semantic-recall.md  7-eval-framework.md  7-semantic-recall.md  8-eval-framework.md  8-toolkit-migration.md  9-codev-integration.md  9-toolkit-migration.md
docs/: fava_trail_faq.md  fava_trail_onepager.html  fava_trails_faq.md  fava_trails_onepager.html
examples/tunnel-gateway/: README.md  compose.yaml
rich_views/: README.md  package-lock.json  package.json
rich_views/src/: content.config.ts
scripts/: bootstrap-data-repo.sh  install-jj.sh
src/fava_trail/: __init__.py  config.py  models.py  server.py  trail.py  trust_gate.py
src/fava_trails/: __init__.py  cli.py  config.py  hook_manifest.py  hook_pipeline.py  hook_types.py  hooks.py  http_runtime.py  models.py  readiness.py  rich_views.py  server.py  trail.py  trust_gate.py  tunnel_cli.py
tests/: conftest.py  test_ace.py  test_cli.py  test_config.py  test_hook_manifest.py  test_hook_pipeline.py  test_hook_types.py  test_hooks.py  test_integrate_codev.py  test_jj_backend.py  test_llm_client.py  test_llm_registry.py  test_models.py  test_navigation_tools.py  test_rich_views.py  test_rlm.py  test_secom.py  test_server_instructions.py  test_tools.py  test_trust_gate.py  test_tunnel_cli.py
traffic-fava-trails/: traffic_clones.json  traffic_clones_per_week.json  traffic_paths.json  traffic_referrers.json  traffic_views.json  traffic_views_per_week.json
(+93 files in other folders)
