[project]
name = "fava-trail"
version = "0.3.3"
description = "FAVA Trail — Federated Agents Versioned Audit Trail. VCS-backed memory for AI agents via MCP."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-ulid>=3.0.0",
    "httpx>=0.28.1",
]

[project.scripts]
fava-trail-server = "fava_trail.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fava_trail"]

[tool.hatch.build.targets.sdist]
include = ["src/fava_trail", "AGENTS_USAGE_INSTRUCTIONS.md"]

[tool.hatch.build.targets.wheel.force-include]
"AGENTS_USAGE_INSTRUCTIONS.md" = "fava_trail/AGENTS_USAGE_INSTRUCTIONS.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
