[project]
name = "fava-trails"
version = "0.4.13"
description = "FAVA Trails 🫛👣 — Federated Agents Versioned Audit Trail. VCS-backed memory for AI agents via MCP."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Machine Wisdom Solutions Inc."}]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "python-ulid>=3.0.0",
    "any-llm-sdk>=1.10.0",
]

[project.optional-dependencies]
bedrock   = ["any-llm-sdk[bedrock]"]
groq      = ["any-llm-sdk[groq]"]
anthropic = ["any-llm-sdk[anthropic]"]
gemini    = ["any-llm-sdk[gemini]"]
mistral   = ["any-llm-sdk[mistral]"]
ollama    = ["any-llm-sdk[ollama]"]
all       = ["any-llm-sdk[bedrock,groq,anthropic,gemini,mistral,ollama]"]

[project.urls]
Homepage = "https://github.com/MachineWisdomAI/fava-trails"
Repository = "https://github.com/MachineWisdomAI/fava-trails"
Issues = "https://github.com/MachineWisdomAI/fava-trails/issues"

[project.scripts]
fava-trails-server = "fava_trails.server:run"
fava-trails = "fava_trails.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fava_trails"]

[tool.hatch.build.targets.sdist]
include = [
    "src/fava_trails/**",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
    "AGENTS_USAGE_INSTRUCTIONS.md",
]

[tool.hatch.build.targets.wheel.force-include]
"AGENTS_USAGE_INSTRUCTIONS.md" = "fava_trails/AGENTS_USAGE_INSTRUCTIONS.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.8.0",
]
